--- a/src/main/webapp/app/entities/blog/list/blog.component.html
+++ b/src/main/webapp/app/entities/blog/list/blog.component.html
@@ -15,7 +15,7 @@
         [routerLink]="['/blog/new']"
       >
         <fa-icon icon="plus"></fa-icon>
-        <span jhiTranslate="jhipsterApp.blog.home.createLabel">Create a new Blog</span>
+        <span jhiTranslate="jhipsterApp.blog.home.createLabel">Create a new Blog!!!</span>
       </button>
     </div>
   </h2>
