modified:   kubernetes/jhipsterapp-k8s/jhipsterapp-deployment.yml aggiornata v5.0 dell'immagine dell'app

--- a/src/main/webapp/app/entities/post/list/post.component.html
+++ b/src/main/webapp/app/entities/post/list/post.component.html
@@ -45,6 +45,7 @@
                 >
               }
             </small>
+            Ma che cazzo
             <div [innerHTML]="post.content"></div>
             <div class="btn-group mb-2 mt-1">
               <button type="submit" [routerLink]="['/post', post.id, 'edit']" class="btn btn-primary btn-sm">
